--- a/app/views/surveys/edit.html
+++ b/app/views/surveys/edit.html
@@ -1,15 +1,24 @@
 <h1>survey edit</h1>
 
+        <h2>{{ works }}</h2>
 <div>
     <label>
-        Title:
-
+        Survey title:
         <input type="text" ng-model="survey.title"/>
     </label>
-    {{ works }}
+
 
 </div>
 
-<h2>Preview</h2>
+<h2>Questions</h2>
 
 <h3>{{ survey.title }}</h3>
+{{survey.questions}}
+<div class="question" ng-repeat="question in survey.questions">
+    <div class="question-title">
+        {{ question.title }}
+    </div>
+    <div class="question-body">
+        {{ question.body }}
+    </div>
+</div>
