--- a/app/views/surveys/edit.html
+++ b/app/views/surveys/edit.html
@@ -1,9 +1,13 @@
-<h1>surveymate</h1>
+<h1>
+    surveymate
+    <small>a prototype survey editor</small>
+</h1>
 <hr>
 
 <div class="survey-heading">
     <form name="editSurvey">
         <input name="survey[title]" type="text" ng-model="survey.title"
+               class="survey-title input-xxlarge"
                placeholder="Survey title" class="input-xxlarge"/>
         <br>
         <textarea name="survey[description]" cols="30" rows="3"
@@ -12,48 +16,12 @@
     </form>
 </div>
 
-<div class="question-preview form-horizontal" ng-repeat="question in survey.questions">
-    <div class="question-title">
-        {{ question.title }}
-    </div>
-    <div class="question-body">
-        <ul class="unstyled">
-            <li ng-repeat="choice in question.choices">
-                <label class="radio">
-                    <input type="radio"/>
-                    {{ choice.content }}
-                </label>
-            </li>
-        </ul>
-    </div>
-    <div class="edit-actions">
-        <a href="#"><i class="icon-edit"></i></a>
-        <a href="#"><i class="icon-book"></i></a>
-        <a href="#"><i class="icon-remove"></i></a>
-    </div>
-</div>
-<div class="question-editor form-horizontal" ng-repeat="question in survey.questions">
-    <table class="table">
-        <tr>
-            <td style="width:100px">Question Title</td>
-            <td>
-                <input type="text" ng-model="question.title"
-                       class="input-xlarge" />
-            </td>
-        </tr>
-    </table>
-    <div class="control-group" ng-repeat="choice in question.choices">
-        <label class="control-label" for="">
-            <input type="radio"/>
-        </label>
 
-        <div class="controls">
-            <input type="text" ng-model="choice.content">
-        </div>
-    </div>
-</div>
+<s-question ng-repeat="question in survey.questions">
+	DUMMY TEXT
+</s-question>
 
 
 <hr>
-        <h1>DEBUG</h1>
+<h1>DEBUG</h1>
 {{ survey }}
