add question_type dropdown (not switchable yet)

--- a/app/styles/survey.scss
+++ b/app/styles/survey.scss
@@ -39,6 +39,9 @@ input.survey-title {
 
 .question-editor .question-choices {
   margin-left: 40px;
+  > li {
+    margin-bottom: 10px;
+  }
 }
 
 a.remove {
