--- a/app/views/surveys/partials/_question.html
+++ b/app/views/surveys/partials/_question.html
@@ -10,7 +10,7 @@
 			<ul class="unstyled">
 				<li ng-repeat="choice in question.choices">
 					<label class="radio">
-						<input type="radio"/>
+						<input type="radio" disabled/>
 						{{ choice.content }}
 					</label>
 				</li>
@@ -28,19 +28,24 @@
 			<tr>
 				<td style="width:100px">Question Title</td>
 				<td>
-					<input type="text" ng-model="question.title"
-					       class="input-xlarge"/>
+					<textarea ng-model="question.title"
+					          class="input-xxlarge"></textarea>
+				</td>
+			</tr>
+			<tr>
+				<td>Question Type</td>
+				<td>
+					<select ng-model="question.type" ng-options="c for c in questionTypes">
+					</select>
 				</td>
 			</tr>
 		</table>
-		<ul class="question-choices unstyled" ng-repeat="choice in question.choices">
-			<li>
+		<ul class="question-choices unstyled">
+			<li ng-repeat="choice in question.choices">
 				<input type="radio" disabled/>
 				<textarea ng-model="choice.content"></textarea>
 				<a ng-click="removeChoice(question, $index)" class="remove">&times;</a>
 			</li>
-		</ul>
-		<ul class="question-choices unstyled">
 			<li>
 				<input type="radio" disabled/>
 				<textarea ng-click="addChoice(question, $event)"
