--- a/app/views/surveys/partials/_question.html
+++ b/app/views/surveys/partials/_question.html
@@ -1,58 +1,3 @@
 <div class="question-container" ng-controller="QuestionsCtrl">
-	<div class="question-preview form-horizontal"
-	     ng-hide="question.isEditing"
-	     ng-dblclick="startEditing(question)"
-	     question-editable="question">
-		<div class="question-title">
-			{{ question.title }}
-		</div>
-		<div class="question-body">
-			<ul class="unstyled">
-				<li ng-repeat="choice in question.choices">
-					<label class="radio">
-						<input type="radio" disabled/>
-						{{ choice.content }}
-					</label>
-				</li>
-			</ul>
-		</div>
-		<div class="edit-actions">
-			<a my-question-edit="question" ng-click="startEditing(question)"><i class="icon-edit"></i></a>
-			<a my-question-copy="question"><i class="icon-book"></i></a>
-			<a my-question-remove="question"><i class="icon-remove"></i></a>
-		</div>
-	</div>
-	<div test-ing></div>
-	<div class="question-editor form-horizontal" ng-show="question.isEditing">
-		<table>
-			<tr>
-				<td style="width:100px">Question Title</td>
-				<td>
-					<textarea ng-model="question.title"
-					          class="input-xxlarge"></textarea>
-				</td>
-			</tr>
-			<tr>
-				<td>Question Type</td>
-				<td>
-					<select ng-model="question.type" ng-options="c for c in questionTypes">
-					</select>
-				</td>
-			</tr>
-		</table>
-		<ul class="question-choices unstyled">
-			<li ng-repeat="choice in question.choices">
-				<input type="radio" disabled/>
-				<textarea ng-model="choice.content"></textarea>
-				<a ng-click="removeChoice(question, $index)" class="remove">&times;</a>
-			</li>
-			<li>
-				<input type="radio" disabled/>
-				<textarea ng-click="addChoice(question, $event)"
-				          readonly
-				          placeholder="Add choice"></textarea>
-			</li>
-		</ul>
-		<button class="btn" ng-click="stopEditing(question)">Done</button>
-	</div>
+	<div ng-include src="getQuestionTemplate(question)"></div>
 </div>
