--- a/app/views/surveys/partials/_scale.html
+++ b/app/views/surveys/partials/_scale.html
@@ -17,17 +17,13 @@
 			<tr>
 				<td>{{question.choices[0].content}}</td>
 				<td ng-repeat="choice_column in question.choice_columns">
-					<input type="radio"></input>
+					<input type="radio" />
 				</td>
 				<td>{{question.choices[1].content}}</td>
 			</tr>
 		</table>
 	</div>
-	<div class="edit-actions">
-		<a my-question-edit="question" ng-click="startEditing(question)"><i class="icon-edit"></i></a>
-		<a my-question-copy="question"><i class="icon-book"></i></a>
-		<a my-question-remove="question"><i class="icon-remove"></i></a>
-	</div>
+	<edit-actions></edit-actions>
 </div>
 <div class="question-editor form-horizontal" ng-show="question.isEditing">
 	<table>
