--- a/app/views/surveys/partials/_scale.html
+++ b/app/views/surveys/partials/_scale.html
@@ -6,17 +6,17 @@
 		{{ question.title }}
 	</div>
 	<div class="question-body">
-		<table>
+		<table class="table">
 			<tr>
 				<td></td>
-				<td ng-repeat="choice_column in question.choice_columns">
+				<td ng-repeat="choice_column in question.choice_columns" class="scale-question-body">
 					{{choice_column.content}}
 				</td>
 				<td></td>
 			</tr>
 			<tr>
 				<td>{{question.choices[0].content}}</td>
-				<td ng-repeat="choice_column in question.choice_columns">
+				<td ng-repeat="choice_column in question.choice_columns" class="scale-question-body">
 					<input type="radio" />
 				</td>
 				<td>{{question.choices[1].content}}</td>
@@ -42,30 +42,28 @@
 			</td>
 		</tr>
 	</table>
-	<table>
-		<tr>
-			<td></td>
-			<td ng-repeat="choice_column in question.choice_columns">
-				<input type="text" ng-model="choice_column.content" class="input-mini"/>
+	<table class="table">
+		<tr class="choice-columns">
+			<td class="scale-label"></td>
+			<td ng-repeat="choice_column in question.choice_columns" class="scale-question-body">
+				<input type="text" ng-model="choice_column.content" class="choice-column"/>
 			</td>
-			<td></td>
-			<td style="width:80px">
-				<a ng-click="addChoiceColumn(question, $event)">Add column</a>
-			</td>
+			<td class="scale-label"></td>
 		</tr>
 		<tr>
-			<td>
-				<input type="text" ng-model="question.choices[0].content" class="input-mini"/>
+			<td class="scale-label">
+				<input type="text" ng-model="question.choices[0].content"/>
 			</td>
-			<td ng-repeat="choice_column in question.choice_columns">
+			<td ng-repeat="choice_column in question.choice_columns" class="scale-question-body">
 				<input type="radio" readonly />
 			</td>
-			<td>
-				<input type="text" ng-model="question.choices[1].content" class="input-mini"/>
+			<td style="text-align: right" class="scale-label">
+				<input type="text" ng-model="question.choices[1].content"/>
 			</td>
-			<td></td>
 		</tr>
 	</table>
-
+	<div>
+		<a ng-click="addChoiceColumn(question, $event)">Add column</a>
+	</div>
 	<button class="btn" ng-click="stopEditing(question)">Done</button>
 </div>
